rock/tests/compile_fail/repeated_section.ra
# sec
# RepeatingSection
block:
    idle;
.sec:
    jmp .sec;
.sec:
    jmp .sec;